// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.input
        type="checkbox"
      />
      <mock-styled.label
        classname=""
      >
        <mock-styled.span>
          On
        </mock-styled.span>
        <mock-styled.span>
          Off
        </mock-styled.span>
      </mock-styled.label>
    </div>
  </body>,
  "container": <div>
    <mock-styled.input
      type="checkbox"
    />
    <mock-styled.label
      classname=""
    >
      <mock-styled.span>
        On
      </mock-styled.span>
      <mock-styled.span>
        Off
      </mock-styled.span>
    </mock-styled.label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ToggleRadio should match a snapshot and render children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
      >
        <mock-styled.input
          id="option-1"
          name="my-cool-toggle-radio"
          type="radio"
          value="option-1"
        />
        <mock-styled.label
          classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
          htmlfor="option-1"
        >
          <mock-styled.span>
            Option 1
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="option-2"
          name="my-cool-toggle-radio"
          type="radio"
          value="option-2"
        />
        <mock-styled.label
          classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
          htmlfor="option-2"
        >
          <mock-styled.span>
            Option 2
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="option-3"
          name="my-cool-toggle-radio"
          type="radio"
          value="option-3"
        />
        <mock-styled.label
          classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
          htmlfor="option-3"
        >
          <mock-styled.span>
            Option 3
          </mock-styled.span>
        </mock-styled.label>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div
      classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
    >
      <mock-styled.input
        id="option-1"
        name="my-cool-toggle-radio"
        type="radio"
        value="option-1"
      />
      <mock-styled.label
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
        htmlfor="option-1"
      >
        <mock-styled.span>
          Option 1
        </mock-styled.span>
      </mock-styled.label>
      <mock-styled.input
        id="option-2"
        name="my-cool-toggle-radio"
        type="radio"
        value="option-2"
      />
      <mock-styled.label
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
        htmlfor="option-2"
      >
        <mock-styled.span>
          Option 2
        </mock-styled.span>
      </mock-styled.label>
      <mock-styled.input
        id="option-3"
        name="my-cool-toggle-radio"
        type="radio"
        value="option-3"
      />
      <mock-styled.label
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
        htmlfor="option-3"
      >
        <mock-styled.span>
          Option 3
        </mock-styled.span>
      </mock-styled.label>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
